--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-<html>
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Certus 2022</title>
+</head>
+<body>
+    <h1>BIENVENIDO A HTML</h1>
+    <h2>BIENVENIDO A HTML</h2>
+    <h3>BIENVENIDO A HTML</h3>
+    <h4>BIENVENIDO A HTML</h4>
+    <h5>BIENVENIDO A HTML</h5>
+    <h6>BIENVENIDO A HTML</h6>
+</body>
 </html>
