--- a/index.html
+++ b/index.html
@@ -4,14 +4,142 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Certus 2022</title>
+    <title>Certus HTML 2022</title>
 </head>
-<body>
-    <h1>BIENVENIDO A HTML</h1>
-    <h2>BIENVENIDO A HTML</h2>
-    <h3>BIENVENIDO A HTML</h3>
-    <h4>BIENVENIDO A HTML</h4>
-    <h5>BIENVENIDO A HTML</h5>
-    <h6>BIENVENIDO A HTML</h6>
+<body> <!--bgcolor="#808080"  0123456789ABCDEF-->
+<a id="inicio"></a>
+ <h1>Ovnis</h1>
+<a href="#marca1">Hipervínculo a la Marca 1</a><br>
+<a href="#marca2">Hipervínculo a la Marca 2</a><br>
+
+<h2>Vínculos externos</h2>
+<a href="rojo.html" target="_self" title="HAz clic">Ir a la pagina Rojo</a>
+                    <!-- _top     _self    _parent-->
+
+
+
+<p>Las revelaciones sobre objetos voladores no identificados de la esperada investigación de los servicios de inteligencia de EE.UU
+Ha sido uno de los informes más esperados en los últimos años de las agencias de inteligencia de EE.UU.
+Tras una solicitud del Congreso en 2020, el gobierno se comprometió a publicar un reporte sobre la información que tenía sobre avistamientos de objetos voladores no identificados (ovnis), tras varios casos sin explicación que han generado titulares en las últimas dos décadas.
+A pocos días de su publicación, medios estadounidenses comenzaron a filtrar los detalles del documento.
+Los que esperaban una respuesta concreta y segura sobre la presencia (o no) de vida proveniente de otros planetas probablemente quedarán frustrados: el documento dice que los analistas de inteligencia no encontraron evidencia de actividad extraterrestre… pero tampoco la descartan.
+Según indican medios locales, una de las principales conclusiones del documento es que ninguna tecnología estadounidense estuvo involucrada en los más 120 incidentes de avistamientos de objetos extraños reportados en las últimas décadas.</p>
+<img src="images/ovni1.jpg" height="300">
+<p>Y es que una de las dudas era si los avistamientos eran resultado de programas secretos llevados a cabo por el gobierno de EE.UU.
+Pero más allá de descartar eso, el informe no hace evaluaciones definitivas sobre cuáles podrían ser los orígenes de tales objetos.
+¿A qué se debe el informe?
+El informe es producto de un grupo de trabajo militar establecido el año pasado para investigar décadas de avistamientos inexplicables en el espacio aéreo de Estados Unidos.
+El Departamento de Defensa dijo que quería "mejorar su comprensión" de los fenómenos aéreos no identificados y determinar si representaban una amenaza para la seguridad nacional.
+El reporte fue ordenado como parte de un paquete de ayuda por la pandemia firmado por el entonces presidente Donald Trump.</p>
+<p>Paises America del sur</p>
+<ul type="circle">
+    <li>Perú</li>
+    <li>Colombia</li>
+    <li>Brasil</li>
+</ul>
+
+<p>Lista de frutas</p>
+<ol type="i">
+    <li>Manzanas</li>
+    <li>Peras</li>
+    <li>Uvas</li>
+    <li>Platanos</li>
+</ol>
+
+<p>Listas Anidadas</p>
+
+<ol>
+    <li>Bolivia</li>
+        <ol type="a">
+            <li>La Paz</li>
+            <li>Oruro</li>
+        </ol>
+    <li>Perú</li>
+        <ol type="a">
+            <li >Lima</li>
+            <li>Arequipa</li>
+        </ol>
+</ol>
+
+<p>Listas de definicion</p>
+<dl>
+    <dt>Brujula</dt>
+        <dd>Señorula montada en una escóbula</dd>
+    <dt>Oreja</dt>
+        <dd>Sesenta minutejos</dd>
+</dl>
+<hr>
+<h1>TABLAS</h1>
+
+<table border="1">
+    <tr><th>Celda1</th><th>Celda2</th></tr>
+    <tr><td>Celda3</td><td>Celda4</td></tr>
+    <tr><td><img src="images/ovni2.jpg" width="100"></td><td><img src="images/ovni1.jpg" width="100"></td></tr>
+</table>
+<hr>
+<center>
+<table border="1" bgcolor="orange" width="60%" height="500">
+    <caption>Esta es mi tabla</caption>
+    <tr>
+        <th colspan="4" align="center">Celda1</th>
+        <!-- <td>Celda2</td>
+        <td>Celda3</td>
+        <td>Celda4</td> -->
+    </tr>
+
+    <tr>
+        <td bgcolor="yellow">Celda5</td>
+        <td rowspan="2">Celda6</td>
+        <td>Celda7</td>
+        <td>Celda8</td>
+    </tr>
+
+    <tr>
+        <td bgcolor="yellow">Celda9</td>
+        
+        <td>Celda11</td>
+        <td rowspan="2"><marquee direction="up" height="100%">Celda12</marquee></td>
+    </tr>
+
+    <tr>
+        <td bgcolor="yellow">Celda13</td>
+        <td>Celda14</td>
+        <td>Celda15</td>
+        
+    </tr>
+</table>
+</center>
+
+<a id="marca1"></a>
+<h1>Marca1</h1>
+
+<p> 
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit quis nobis, recusandae quia, minus porro perspiciatis, voluptas aliquam ad esse corrupti dolorem. Consectetur nemo magni, eius alias officia velit excepturi veritatis voluptatibus ex molestias eos facilis maiores, distinctio nisi deleniti cumque facere fugit perferendis tempora sit iste possimus aperiam? Obcaecati impedit vero perferendis, voluptatum a est consequatur animi cum aperiam tempora vel suscipit repudiandae libero fuga tempore et odio alias sequi exercitationem, veniam quod. Similique, nemo ad earum voluptatibus architecto rem doloribus ab? Veritatis aliquid reprehenderit nesciunt, sit quis nobis iure dolorum consectetur, quas ea eum fugit numquam porro ex.
+</p>
+<p> 
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit quis nobis, recusandae quia, minus porro perspiciatis, voluptas aliquam ad esse corrupti dolorem. Consectetur nemo magni, eius alias officia velit excepturi veritatis voluptatibus ex molestias eos facilis maiores, distinctio nisi deleniti cumque facere fugit perferendis tempora sit iste possimus aperiam? Obcaecati impedit vero perferendis, voluptatum a est consequatur animi cum aperiam tempora vel suscipit repudiandae libero fuga tempore et odio alias sequi exercitationem, veniam quod. Similique, nemo ad earum voluptatibus architecto rem doloribus ab? Veritatis aliquid reprehenderit nesciunt, sit quis nobis iure dolorum consectetur, quas ea eum fugit numquam porro ex.
+</p>
+<p> 
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit quis nobis, recusandae quia, minus porro perspiciatis, voluptas aliquam ad esse corrupti dolorem. Consectetur nemo magni, eius alias officia velit excepturi veritatis voluptatibus ex molestias eos facilis maiores, distinctio nisi deleniti cumque facere fugit perferendis tempora sit iste possimus aperiam? Obcaecati impedit vero perferendis, voluptatum a est consequatur animi cum aperiam tempora vel suscipit repudiandae libero fuga tempore et odio alias sequi exercitationem, veniam quod. Similique, nemo ad earum voluptatibus architecto rem doloribus ab? Veritatis aliquid reprehenderit nesciunt, sit quis nobis iure dolorum consectetur, quas ea eum fugit numquam porro ex.
+</p>
+<a href="#inicio"><img src="images/corazon.gif"></a>
+
+
+
+<a id="marca2"></a>
+<h1>Marca 2</h1>
+
+<p> 
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit quis nobis, recusandae quia, minus porro perspiciatis, voluptas aliquam ad esse corrupti dolorem. Consectetur nemo magni, eius alias officia velit excepturi veritatis voluptatibus ex molestias eos facilis maiores, distinctio nisi deleniti cumque facere fugit perferendis tempora sit iste possimus aperiam? Obcaecati impedit vero perferendis, voluptatum a est consequatur animi cum aperiam tempora vel suscipit repudiandae libero fuga tempore et odio alias sequi exercitationem, veniam quod. Similique, nemo ad earum voluptatibus architecto rem doloribus ab? Veritatis aliquid reprehenderit nesciunt, sit quis nobis iure dolorum consectetur, quas ea eum fugit numquam porro ex.
+</p>
+
+<p> 
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit quis nobis, recusandae quia, minus porro perspiciatis, voluptas aliquam ad esse corrupti dolorem. Consectetur nemo magni, eius alias officia velit excepturi veritatis voluptatibus ex molestias eos facilis maiores, distinctio nisi deleniti cumque facere fugit perferendis tempora sit iste possimus aperiam? Obcaecati impedit vero perferendis, voluptatum a est consequatur animi cum aperiam tempora vel suscipit repudiandae libero fuga tempore et odio alias sequi exercitationem, veniam quod. Similique, nemo ad earum voluptatibus architecto rem doloribus ab? Veritatis aliquid reprehenderit nesciunt, sit quis nobis iure dolorum consectetur, quas ea eum fugit numquam porro ex.
+</p>
+
+<p> 
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit quis nobis, recusandae quia, minus porro perspiciatis, voluptas aliquam ad esse corrupti dolorem. Consectetur nemo magni, eius alias officia velit excepturi veritatis voluptatibus ex molestias eos facilis maiores, distinctio nisi deleniti cumque facere fugit perferendis tempora sit iste possimus aperiam? Obcaecati impedit vero perferendis, voluptatum a est consequatur animi cum aperiam tempora vel suscipit repudiandae libero fuga tempore et odio alias sequi exercitationem, veniam quod. Similique, nemo ad earum voluptatibus architecto rem doloribus ab? Veritatis aliquid reprehenderit nesciunt, sit quis nobis iure dolorum consectetur, quas ea eum fugit numquam porro ex.
+</p>
+
 </body>
 </html>
